Fix buffer cycling function args

--- a/emacs.org
+++ b/emacs.org
@@ -323,8 +323,8 @@ These are non-interactive library functions useful in other parts of this config
 (defun jw--buffer-names-list-using-major-mode (mode)
   (-map (lambda (b) (buffer-name b)) (jw--buffers-list-using-major-mode mode)))
 
-(defun jw--buffers-cycle-to-next-using-major-mode (mode cycle-backward &optional create-new args-list)
-  "This function switches to the next buffer from all buffers using the provided major mode. The ordering of the buffers is determined by name, alphabetically sorted. If there are no buffers using the major mode, then a new one is created using the `create-new' argument."
+(defun jw--buffers-cycle-to-next-using-major-mode (mode &optional cycle-backward create-new args-list)
+  "This function switches to the next buffer from all buffers using the provided major mode. The ordering of the buffers is determined by name, alphabetically sorted. If there are no buffers using the major mode, then a new one is created using the `create-new' argument. Using non-nil `cycle-backward' will reverse the order of cycling."
   (let ((buffers (jw--buffer-names-list-using-major-mode mode)))
     (if (or (not (eq major-mode mode)) (not buffers))
         (when create-new (apply create-new args-list))
