Update kubel-quick-edit to use kubectl-edit for prefix arg 4 only

--- a/emacs.org
+++ b/emacs.org
@@ -2304,7 +2304,7 @@ support =gist= & =gist+raw= org links
 
 
   (advice-add 'kubel-quick-edit :around (lambda (f &rest args)
-                                          (if current-prefix-arg (jw-kubel-read-and-edit-resource) (apply f args))
+                                          (if (equal (prefix-numeric-value current-prefix-arg) 4) (jw-kubel-read-and-edit-resource) (apply f args))
                                           ))
   )
 
