--- a/emacs.org
+++ b/emacs.org
@@ -2155,6 +2155,7 @@ support =gist= & =gist+raw= org links
 (global-set-key (kbd "C-x p") 'counsel-emacs-processes-dwim)
 (global-set-key (kbd "C-x P") 'proced)
 (global-set-key (kbd "M-s o") 'swiper-thing-at-point)
+(global-set-key (kbd "M-s O") 'swiper-all-thing-at-point)
 (global-set-key (kbd "C-s") 'swiper)
 (global-set-key (kbd "C-r") 'swiper-backward)
 (global-set-key (kbd "M-s i") 'counsel-imenu)
