--- a/emacs.org
+++ b/emacs.org
@@ -744,6 +744,8 @@ theme
 * settings
 
 #+BEGIN_SRC emacs-lisp
+(setq warning-minimum-level :error)
+
 (setq gc-cons-threshold 100000000)
 (add-function :after after-focus-change-function (lambda () (unless (frame-focus-state) (garbage-collect))))
 
