--- a/emacs.org
+++ b/emacs.org
@@ -2474,13 +2474,21 @@ support ammonite repl in org babel, requires `amm` command, or ammonite-repl
 (defun jw-js--package-json-scripts-alist ()
   (alist-get 'scripts (json-parse-string (f-read-text "package.json") :object-type 'alist)))
 
+(defun jw-js--get-script-runner ()
+  (if (f-exists? "pnpm-lock.yaml") "pnpm"
+    (if (f-exists? "yarn.lock") "yarn"
+      (if (f-exists? "package-lock.json") "npm"
+        (error "Could not figure out package manager script runner")))))
+
 (defun jw-js-package-json-scripts ()
   "Function that autogenerates interactive functions for each package.json script in either the current projectile project or else the pwd."
   (interactive)
   (let* ((default-directory (or (projectile-project-root) (jw--pwd)))
-         (dir-name (car (last (f-split default-directory)))))
+         (dir-name (car (last (f-split default-directory))))
+         (script-runner (jw-js--get-script-runner)))
+    ;; todojoe -- generate install function
     (dolist (scripts-alist (jw-js--package-json-scripts-alist))
-      (let ((command-name (format "yarn %s" (jw--symbol-name (car scripts-alist))))
+      (let ((command-name (format "%s run %s" script-runner (jw--symbol-name (car scripts-alist))))
             (command-impl (cdr scripts-alist)))
         (fset (intern (format "package-json--%s--%s" dir-name (s-replace " " "-" command-name)))
               `(lambda (arg)
