--- a/emacs.org
+++ b/emacs.org
@@ -762,6 +762,8 @@ theme
 
 (setq help-window-select t)
 
+(which-key-mode 1)
+
 (pixel-scroll-precision-mode 1)
 
 (setq enable-local-variables :all)
@@ -1399,11 +1401,6 @@ argument makes the windows rotate backwards."
   (interactive)
   (dired-do-kill-line-dwim 1))
 
-(defun dired-find-file-external ()
-  (interactive)
-  (dolist (f (dired-get-marked-files))
-    (find-file-external f)))
-
 (defun jw-narrow-dwim (arg)
   (interactive "P")
   (cond (arg (widen))
@@ -1568,7 +1565,6 @@ argument makes the windows rotate backwards."
 (define-key dired-mode-map (kbd "$") 'dired-hide-subdir-dwim)
 (define-key dired-mode-map (kbd "k") 'dired-do-kill-line-dwim)
 (define-key dired-mode-map (kbd "K") 'dired-do-kill-subdir-dwim)
-(define-key dired-mode-map (kbd "e") 'dired-find-file-external)
 (define-key narrow-map (kbd "r") 'narrow-to-region)
 (define-key narrow-map (kbd "n") 'jw-narrow-dwim)
 (define-key narrow-map (kbd "' '") 'edit-indirect-region)
