--- a/emacs.org
+++ b/emacs.org
@@ -2098,9 +2098,9 @@ org-babel languages & automatic yasnippet creation
 (org-babel-format-lang 'json)
 (add-to-list 'org-src-lang-modes '("json" . js-json))
 
-(setq org-babel-default-header-args:sh '((:results . "output"))
-      org-babel-default-header-args:shell '((:results . "output"))
-      org-babel-default-header-args:bash '((:results . "output")))
+(setq org-babel-default-header-args (cons '(:results . "output replace")
+                                          (assq-delete-all :results org-babel-default-header-args) ;; remove original :results element
+                                          ))
 
 (let ((c-compiler (executable-find "clang"))
       (cpp-compiler (executable-find "clang++")))
@@ -2578,8 +2578,6 @@ support typescript in org babel
 
 (org-babel-src-yasnippet 'typescript nil ":run-js true")
 (org-babel-src-yasnippet 'ts 'typescript ":run-js true")
-
-(setq org-babel-default-header-args:typescript '((:results . "output")))
 #+END_SRC
 
 * private config
