--- a/emacs.org
+++ b/emacs.org
@@ -2098,9 +2098,7 @@ org-babel languages & automatic yasnippet creation
 (org-babel-format-lang 'json)
 (add-to-list 'org-src-lang-modes '("json" . js-json))
 
-(setq org-babel-default-header-args (cons '(:results . "output replace")
-                                          (assq-delete-all :results org-babel-default-header-args) ;; remove original :results element
-                                          ))
+(add-to-list 'org-babel-default-header-args '(:results . "output"))
 
 (let ((c-compiler (executable-find "clang"))
       (cpp-compiler (executable-find "clang++")))
