--- a/emacs.org
+++ b/emacs.org
@@ -68,6 +68,8 @@ Now, start emacs.
 (when (and (executable-find "cmake") (executable-find "libtool") (executable-find "vterm-ctrl"))
   (use-package vterm))
 
+(use-package neotree)
+
 (use-package verb)
 (use-package curl-to-elisp)
 
