--- a/emacs.org
+++ b/emacs.org
@@ -68,8 +68,6 @@ Now, start emacs.
 (when (and (executable-find "cmake") (executable-find "libtool") (executable-find "vterm-ctrl"))
   (use-package vterm))
 
-(use-package neotree)
-
 (use-package verb)
 (use-package curl-to-elisp)
 
@@ -104,6 +102,10 @@ Now, start emacs.
 
 (use-package counsel) ;; brings in ivy & swiper
 (use-package counsel-projectile)
+
+(use-package hydra)
+(use-package treemacs)
+(setq treemacs-show-cursor t)
 
 (use-package company)
 (setq company-idle-delay nil)
